css overflow fix

--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -12,7 +12,7 @@
 }
 
 html{
-    width: 100vw;
+    width: 10vw;
     height: 100vh;
     overflow: hidden;
 }
@@ -26,6 +26,7 @@ body {
     flex-direction: column;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 }
 
 header {
